# proyecto-compi

./: .add.lang.swp  .compilar.sh.swp  CMakeLists.txt  Makefile  a.out  add.lang  archivo.vg  arrancar_vga.sh  ast  ast.c  ast.h  ast_graph.c  bandera.vg  calc.l  calc.tab.c  calc.tab.h  calc.y  comandos.txt  compilar.sh  cono.vg  ej1.vg  ej2.vg  ej3.vg  file.vg  frontend.py  lex.yy.c  main.cpp  miarchivo.vg  pasillo.vg  result.c  sym_table.c  sym_table.h  temp.vg  test.txt  test.vg  vgraph  vgraph.l  vgraph.lex  vgraph.output  vgraph.tab.c  (+5 more)
SDL/: Comando.txt  arbol_fractal  arbol_fractal.c  main  main.c
VM/: .gdbinit  Makefile  docker-compose.yml  ordenes.txt  ordenes.vg
VM/scripts/: docker_run  docker_shell
VM/src/common/: stdlib.c  stdlib.h  types.h
VM/src/input/: .interpeter.c.swp  interpreter.c  interpreter.h  main.mk
VM/src/kernel/: kernel.c  kernel.h  keyboard_map.h
VM/src/vga/: main.mk  vga.c  vga.h  vga_color.c  vga_color.h
